# adapmine

./: CMakeLists.txt  README.md
include/: approx.h  dataloader.h  graph.h  pattern.h  schedule_IEP.h  vertex_set.h
src/: CMakeLists.txt  approx.cpp  approx_es.cpp  clique_test.cpp  dataloader.cpp  fsm_test.cpp  fsm_vertex_test.cpp  graph.cpp  graphmpi.cpp  motif_counting_test.cpp  pm_test.cpp  schedule_IEP.cpp  set_operation.cpp  vertex_set.cpp
tianhe/: baseline_test.cpp  mc_ref.cc
